# stochastic_utcp

./: LICENSE  README.md  pyproject.toml
ahahuac_problem/data/: subjects.py
model/: chromosome.py  igniters.py  solver.py  types.py  utils.py
thesis_problem/: __init__.py  __main__.py
thesis_problem/data/: classrooms.py  professors.py  schedules.py  subjects.py
