[tool.poetry]
name = "stochastic-utcp"
version = "0.1.0"
description = "Stochastic UTCP solution"
authors = ["ricardoleal20 <rick.leal420@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
deap = "~=1.4.2"
numpy = "~=2.2"
pandas = "~=2.2"
scipy = "~=1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
